<resources>
    <string name="app_name">Rabyks</string>

    <string name="name_of_user">name</string>
    <string name="action_search">Search</string>
    <string name="action_login">Login</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wen">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>

    <string-array name="planets_array">
        <item>Pocetna</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Gazda Detalji</item>
        <item>Gazda Konobari</item>
        <item>Promeni Raspored</item>
    </string-array>

    <string-array name="favorites_array">
        <item>Pocetna</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_club">ClubActivity</string>

    <string name="login_url">http://ec2-52-25-20-155.us-west-2.compute.amazonaws.com:80/login</string>
    <string name="register_url">http://ec2-52-25-20-155.us-west-2.compute.amazonaws.com:80/register</string>
    <string name="getWaiters">http://ec2-52-25-20-155.us-west-2.compute.amazonaws.com:80/getWaiters</string>
    <string name="removeWaiter">http://ec2-52-25-20-155.us-west-2.compute.amazonaws.com:80/removeWaiter</string>
    <string name="addWaiter">http://ec2-52-25-20-155.us-west-2.compute.amazonaws.com:80/addWaiter</string>
    <string name="dialog_reservation">Rezervacija</string>
    <string name="cancel">Otkazi</string>
    <string name="confirme">Potvrdi</string>

    <string name="serverIP">http://ec2-52-25-20-155.us-west-2.compute.amazonaws.com:80</string>
    <string name="socketAddress">ec2-52-25-20-155.us-west-2.compute.amazonaws.com</string>

    <string name="timerVal">00:00:00</string>


    <string name="savePositionURL">http://ec2-52-25-20-155.us-west-2.compute.amazonaws.com:80/postPartnerObjectSetup</string>

</resources>
